--- a/resources/views/Stylesheet.twig
+++ b/resources/views/Stylesheet.twig
@@ -1,3 +1,3 @@
-<!-- This template is only used for providing the stylesheet path in the respective container. The stylesheet will only apply if the CeresVanilla Stylesheet data provider is linked in the Plugins » Content menu -->
+<!-- This template is only used for providing the stylesheet path in the respective container. The stylesheet will only apply if the BermaroTheme Stylesheet data provider is linked in the Plugins » Content menu -->
 
-<link rel="stylesheet" href="{{ plugin_path('CeresVanilla') }}/css/bermaro.min.css">
+<link rel="stylesheet" href="{{ plugin_path('BermaroTheme') }}/css/bermaro.min.css">
